--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   text-align: right;
 }
 
-.header img {
+.header .header-img {
   width: 100%;
 }
 
@@ -57,7 +57,7 @@ button {
   outline: none;
 }
 
-button {
+.button {
   background: none;
   border: 0px;
   color: #888;
@@ -67,13 +67,13 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.button:hover {
   color: #3a3A3a;
 }
 
 /* Heading */
 h3,
-label[for='new-task'] {
+.h3 {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -83,7 +83,7 @@ label[for='new-task'] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.text-input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -96,22 +96,22 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.text-input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for='new-task'] {
+.h3 {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+#new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.list li {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -121,50 +121,50 @@ li {
   align-items: center;
 }
 
-li>* {
+/* li>* {
   vertical-align: middle;
-}
+} */
 
-li>input[type="checkbox"] {
+.list .checkbox {
   margin: 0 10px;
 }
 
-li>label {
+.list .label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li>input[type="text"] {
+.list .text-input {
   width: 226px
 }
 
-button.delete img {
+.button.delete .icon-img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.button.delete .icon-img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+#completed-tasks .label {
   text-decoration: line-through color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.list .text-input {
   display: none
 }
 
-ul li.editMode input[type=text] {
+.list .editMode .text-input {
   display: inline-block;
   width: 224px
 }
 
-ul li.editMode label {
+.list .editMode .label {
   display: none;
 }
