--- a/style.css
+++ b/style.css
@@ -5,6 +5,37 @@ body {
   font-family: Lato, sans-serif;
 }
 
+ul {
+  margin: 0;
+  padding: 0px;
+}
+
+li {
+  list-style: none;
+}
+
+input,
+button {
+  outline: none;
+}
+
+/* Heading */
+h3,
+.h3 {
+  color: #333;
+  font-weight: 700;
+  font-size: 15px;
+  border-bottom: 2px solid #333;
+  padding: 30px 0 10px;
+  margin: 0;
+  text-transform: uppercase;
+}
+
+.h3 {
+  display: block;
+  margin: 0 0 20px;
+}
+
 .header {
   width: 500px;
   margin: 0 auto;
@@ -20,17 +51,13 @@ body {
   font-family: fantasy, cursive;
 }
 
-@media (max-width:768px) {
-  .header {
-    text-align: center;
-  }
-}
-
 .main-screen {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
+
+/* Task */
 
 .task {
   width: 56%;
@@ -40,21 +67,6 @@ body {
 
 .task-row-wrapper {
   display: flex;
-}
-
-ul {
-  margin: 0;
-  padding: 0px;
-}
-
-li,
-h3 {
-  list-style: none;
-}
-
-input,
-button {
-  outline: none;
 }
 
 .button {
@@ -69,18 +81,6 @@ button {
 
 .button:hover {
   color: #3a3A3a;
-}
-
-/* Heading */
-h3,
-.h3 {
-  color: #333;
-  font-weight: 700;
-  font-size: 15px;
-  border-bottom: 2px solid #333;
-  padding: 30px 0 10px;
-  margin: 0;
-  text-transform: uppercase;
 }
 
 .text-input {
@@ -101,11 +101,6 @@ h3,
 }
 
 /* New Task */
-.h3 {
-  display: block;
-  margin: 0 0 20px;
-}
-
 #new-task {
   width: 318px;
 }
@@ -115,7 +110,6 @@ h3,
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -167,4 +161,10 @@ h3,
 
 .list .editMode .label {
   display: none;
+}
+
+@media (max-width:768px) {
+  .header {
+    text-align: center;
+  }
 }
