--- a/style.css
+++ b/style.css
@@ -46,18 +46,18 @@ h3,
   text-align: right;
 }
 
-.header .header-img {
+.header__img {
   width: 100%;
 }
 
-.header .more-info {
+.header__link {
   font-family: fantasy, cursive;
 }
 
 
 /* Main */
 
-.main-screen {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -72,7 +72,7 @@ h3,
   flex-grow: 1
 }
 
-.task-row-wrapper {
+.task__row {
   display: flex;
 }
 
@@ -110,14 +110,14 @@ h3,
 
 /* New Task */
 
-#new-task {
+.task__input-add {
   width: 318px;
 }
 
 
 /* Task list */
 
-.list li {
+.list__item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -130,35 +130,35 @@ h3,
   vertical-align: middle;
 } */
 
-.list .checkbox {
+.list__checkbox {
   margin: 0 10px;
 }
 
-.list .label {
+.list__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-.list .text-input {
+.list__text-input {
   width: 226px;
 }
 
-.button.delete .icon-img {
+.button__img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-.button.delete .icon-img:hover {
+.button__img:hover {
   transform: rotateZ(0);
 }
 
 
 /* Completed */
 
-#completed-tasks .label {
+.list__label-completed {
   text-decoration: line-through;
   color: #888;
 }
@@ -166,16 +166,16 @@ h3,
 
 /* Edit Task */
 
-.list .text-input {
+.list__text-input {
   display: none;
 }
 
-.list .editMode .text-input {
+.list__text-input-edit {
   display: inline-block;
   width: 224px;
 }
 
-.list .editMode .label {
+.list__label-edit {
   display: none;
 }
 
